message Outer {
    message MiddleBB {
        message Inner {
            required int32 ival = 1;
            optional bool booly = 2;
        }
    }
    message MiddleAA {
        message Inner {
            required int64 ival = 1;
            optional bool booly = 2;
        }
    }
}
message SomeOtherMessage {
    optional SearchResponse.Result result = 1;
}
message SearchResponse {
    message Result {
        required string url = 1;
        optional string title = 2;
        repeated string snippets = 3;
    }
    repeated Result result = 1;
}
